디자인 업데이트

--- a/css/colors.less
+++ b/css/colors.less
@@ -27,3 +27,4 @@
 @color-dark-gray: @ac-gray-800;
 @color-disable: @ac-gray-200;
 .color-failed { color: @ac-red-600 !important; }
+.color-blue { color: @ac-blue-600; }
