--- a/css/colors.less
+++ b/css/colors.less
@@ -28,3 +28,33 @@
 @color-disable: @ac-gray-200;
 .color-failed { color: @ac-red-600 !important; }
 .color-blue { color: @ac-blue-600; }
+
+.tag-green {
+  color: #fff;
+  background-color: #00CA35;
+}
+
+.tag-yellow {
+  color: #D07310;
+  background-color: #FCEDD4;
+}
+
+.tag-greenish {
+  color: #0E7444;
+  background-color: #A1D7BF;
+}
+
+.tag-purple {
+  color: #7433CA;
+  background-color: #EBDBFD;
+}
+
+.color-rating-red {
+  color: #fff;
+  background-color: #800025;
+}
+
+.color-rating-orange {
+  color: #fff;
+  background-color: #F9AE2F;
+}
