--- a/css/typography.less
+++ b/css/typography.less
@@ -2,3 +2,13 @@
   font-size: 15px;
   font-weight: bold;
 }
+
+.tpgp-h1 {
+  font-size: 48px;
+  font-weight: bold;
+}
+
+.tpgp-h2 {
+  font-size: 36px;
+  font-weight: bold;
+}
