--- a/css/embold.css
+++ b/css/embold.css
@@ -4,9 +4,53 @@
 .color-blue {
   color: #17298E;
 }
+.tag-green {
+  color: #fff;
+  background-color: #00CA35;
+}
+.tag-yellow {
+  color: #D07310;
+  background-color: #FCEDD4;
+}
+.tag-greenish {
+  color: #0E7444;
+  background-color: #A1D7BF;
+}
+.tag-purple {
+  color: #7433CA;
+  background-color: #EBDBFD;
+}
+.color-rating-red {
+  color: #fff;
+  background-color: #800025;
+}
+.color-rating-orange {
+  color: #fff;
+  background-color: #F9AE2F;
+}
 .tpgp-h3 {
   font-size: 15px;
   font-weight: bold;
+}
+.tpgp-h1 {
+  font-size: 48px;
+  font-weight: bold;
+}
+.tpgp-h2 {
+  font-size: 36px;
+  font-weight: bold;
+}
+.ic-loc-minimum {
+  background-image: url('../img/icon-loc-minimum.svg');
+}
+.ic-more {
+  background-image: url('../img/icon-more.svg');
+}
+.ic-github {
+  background-image: url('../img/icon-github.svg');
+}
+.ic-issues-minimum {
+  background-image: url('../img/icon-issues-minimum.svg');
 }
 body {
   background-color: #F8F8FB;
@@ -100,6 +144,11 @@ body {
 .menu-main {
   margin-left: 240px;
 }
+@media (min-width: 768px) and (max-width: 1300px) {
+  .menu-main {
+    margin-left: 24px;
+  }
+}
 .search-global {
   color: #F1F2F4;
   width: 330px !important;
@@ -107,34 +156,137 @@ body {
   font-size: 15px;
   border: none;
 }
-.wrap-summary .col-5th {
-  display: inline-block;
-  width: 17%;
-  margin: 0 18px;
-  flex: auto;
+@media (min-width: 768px) and (max-width: 1084px) {
+  .search-global {
+    display: none !important;
+  }
 }
-.wrap-summary .col-5th .header-block {
+.wrap-summary .block-summary {
+  height: 140px;
+  border-right: 1px solid #F2F3F5;
+}
+.wrap-summary .block-summary .header-block {
   text-align: center;
-  margin-bottom: 18px;
+  margin-bottom: 9px;
 }
-.wrap-summary .col-5th .header-block .icon {
+.wrap-summary .block-summary .header-block .icon {
   display: block;
   width: 28px;
   height: 28px;
   margin: 6px auto;
 }
-.wrap-summary .col-5th .header-block .icon img {
+.wrap-summary .block-summary .header-block .icon img {
   widht: 28px;
   height: 28px;
 }
-.wrap-summary .col-5th .header-block .title {
+.wrap-summary .block-summary .header-block .title {
   display: block;
   font-size: 15px;
   font-weight: bold;
   text-transform: uppercase;
 }
-.wrap-summary .col-5th .content {
+.wrap-summary .block-summary .content {
   text-align: center;
+}
+.wrap-summary .block-summary .content-summary-repository {
+  font-size: 48px;
+  font-weight: bold;
+  color: #2738B5;
+  margin-top: 0;
+}
+.wrap-summary .block-summary .content-summary-rating {
+  display: inline-block;
+  margin-top: 9px;
+  padding-right: 24px;
+  font-size: 24px;
+  font-weight: 600;
+  padding: 6px 14px;
+  border-radius: 40px;
+}
+.wrap-summary .block-summary .image-container {
+  width: 200px;
+  height: 60px;
+  margin: auto auto;
+  background-image: url('../img/image-loc-big.svg');
+  background-repeat: no-repeat;
+  background-size: 104px 48px;
+  background-position: 75% center;
+}
+.wrap-summary .block-summary .image-container .content-summary-loc {
+  font-size: 36px;
+  font-weight: bold;
+  display: inline-block;
+  padding-right: 48px;
+}
+.wrap-summary .block-summary:last-of-type {
+  border-right: 0;
+}
+@media (max-width: 991px) {
+  .wrap-summary .block-summary {
+    height: inherit;
+  }
+  .wrap-summary .block-summary .header-block {
+    display: inline-block;
+    text-align: center;
+    margin: 8px 0;
+  }
+  .wrap-summary .block-summary .header-block .icon {
+    display: inline-block;
+    width: 28px;
+    height: 28px;
+    margin: 6px auto;
+  }
+  .wrap-summary .block-summary .header-block .icon img {
+    widht: 28px;
+    height: 28px;
+  }
+  .wrap-summary .block-summary .header-block .title {
+    display: inline-block;
+    font-size: 15px;
+    font-weight: bold;
+    text-transform: uppercase;
+  }
+  .wrap-summary .block-summary .content {
+    display: inline-block;
+    text-align: center;
+    left: 200px;
+    position: absolute;
+  }
+  .wrap-summary .block-summary .content .content-summary-repository {
+    font-size: 36px;
+    font-weight: bold;
+    display: inline-block;
+    margin-top: 6px;
+  }
+  .wrap-summary .block-summary .content .content-summary-rating {
+    font-size: 18px;
+    font-weight: bold;
+    padding: 2px 7px;
+    border-radius: 14px;
+    display: inline-block;
+    margin-top: 12px;
+  }
+  .wrap-summary .block-summary .content .image-container {
+    margin: inherit;
+    width: auto;
+    background-repeat: no-repeat;
+    background-size: 84px auto;
+    background-position: right;
+  }
+  .wrap-summary .block-summary .content .image-container .content-summary-loc {
+    font-size: 36px;
+    font-weight: bold;
+    display: inline-block;
+    margin-top: 6px;
+  }
+  .wrap-summary .block-summary:nth-of-type(even) {
+    border-right: 0;
+  }
+}
+@media (max-width: 767px) {
+  .wrap-summary .block-summary {
+    border-right: 0;
+  }
 }
 .context {
   width: 193px;
@@ -174,17 +326,23 @@ body {
   height: 24px;
   background-repeat: none;
   background-size: 100% 100%;
-  background-color: rgba(255, 0, 0, 0.3);
 }
 .icon-xs {
   display: inline-block;
-  width: 20px;
-  height: 20px;
+  width: 15px;
+  height: 15px;
+  margin-top: 2px;
   margin-right: 6px;
   background-repeat: none;
   background-size: 100% 100%;
-  background-color: rgba(255, 0, 0, 0.3);
   vertical-align: top;
+}
+.wrap-repository-list {
+  margin-top: 18px;
+}
+.block-repository {
+  position: relative;
+  margin-bottom: 16px;
 }
 .block-repository .section-title span {
   float: left;
@@ -210,6 +368,12 @@ body {
 }
 .block-repository .section-title .rating-medium {
   margin-top: 0;
+}
+.block-repository .section-title .icon-context {
+  top: 14px;
+  right: 12px;
+  position: absolute;
+  cursor: pointer;
 }
 .block-repository .section-divider {
   border-bottom: 1px solid #ECEDF0;
@@ -248,15 +412,18 @@ body {
   text-align: right;
 }
 .block-repository .section-information {
+  display: flex;
+  flex-wrap: wrap;
   color: #85888E;
-  font-family: 'Proxima Nova Condensed', sans-serif;
+  font-family: proxima-nova-condensed, sans-serif !important;
   font-weight: 600;
+  font-style: normal;
 }
 .block-repository .section-information .block-data {
-  display: inline-block;
-  width: 30%;
-  margin-right: 9px;
-  padding-right: 9px;
+  flex-grow: 3;
+  width: auto;
+  margin-right: 3px;
+  padding-right: 3px;
   border-right: 1px solid #DDDEE2;
   text-align: center;
 }
@@ -268,32 +435,40 @@ body {
   padding-right: 0;
   border-right: 0;
 }
-.rating-medium {
+@media (min-width: 992px) and (max-width: 1390px) {
+  .block-repository .section-information .block-data .icon-xs {
+    display: none !important;
+  }
+}
+.rating-md {
   font-size: 14px;
+  font-weight: bold;
+  padding: 2px 9px 2px 7px;
+  border-radius: 14px;
+}
+.rating-lg {
+  font-size: 18px;
   font-weight: bold;
   padding: 2px 7px;
   border-radius: 14px;
 }
-.tag-small {
-  font-family: 'Proxima Nova Condensed', sans-serif;
-  font-size: 14px;
+.rating-xl {
+  font-size: 24px;
   font-weight: 600;
+  padding: 6px 14px;
+  border-radius: 40px;
+}
+.tag-small {
+  font-family: proxima-nova-condensed, sans-serif !important;
+  font-weight: 600;
+  font-style: normal;
+  font-size: 14px;
   padding: 4px 12px;
   border-radius: 14px;
 }
-.tag-green {
-  color: #fff;
-  background-color: #00CA35;
-}
-.tag-yellow {
-  color: #D07310;
-  background-color: #FCEDD4;
-}
-.tag-greenish {
-  color: #0E7444;
-  background-color: #A1D7BF;
-}
-.tag-purple {
-  color: #7433CA;
-  background-color: #EBDBFD;
+.tag-xl {
+  font-size: 24px;
+  font-weight: 600;
+  padding: 6px 14px;
+  border-radius: 40px;
 }
