클래스 이름 정리

--- a/css/colors.less
+++ b/css/colors.less
@@ -29,24 +29,44 @@
 .color-failed { color: @ac-red-600 !important; }
 .color-blue { color: @ac-blue-600; }
 
-.tag-green {
+.color-tag-green {
   color: #fff;
   background-color: #00CA35;
 }
 
-.tag-yellow {
+.color-tag-yellow {
   color: #D07310;
   background-color: #FCEDD4;
 }
 
-.tag-greenish {
+.color-tag-greenish {
   color: #0E7444;
   background-color: #A1D7BF;
 }
 
-.tag-purple {
+.color-tag-purple {
   color: #7433CA;
   background-color: #EBDBFD;
+}
+
+.color-tag-sky {
+  color: #0D88B1;
+  background-color: #D2EFFC;
+}
+
+.color-tag-brown {
+  color: #947964;
+  background-color: #F2ECE8;
+}
+
+.color-tag-gray {
+  color: @ac-gray-500;
+  background-color: @ac-gray-150;
+}
+
+.color-tag-red {
+  color: #9E0D0D;
+  background-color: #FCE0E0;
 }
 
 .color-rating-red {
